Fix header alignment (microsoft/vscode-python#5355)

--- a/extensions/positron-python/src/datascience-ui/data-explorer/mainPanel.css
+++ b/extensions/positron-python/src/datascience-ui/data-explorer/mainPanel.css
@@ -86,7 +86,7 @@ body {
     color: var(--vscode-editor-foreground);
     border-right-color: var(--vscode-editor-inactiveSelectionBackground);
     border-bottom-color: var(--vscode-editor-inactiveSelectionBackground);
-    text-align: center;
+    text-align: left;
 }
 
 .main-panel .react-grid-Cell {
